fixed hamburger background in dark mode

--- a/css/dark_light.css
+++ b/css/dark_light.css
@@ -9,7 +9,7 @@ body.dark-mode {
 body.dark-mode a {
   color: #eee;
 }
-body.dark-mode button {
+body.dark-mode button:not(.navbar-toggler) {
   background-color: #eee;
   color: #111;
 }
